compResults.txt
D:\GitHub\scifirpg\scifirpg\src\main\java\sharp\game\App.java:61: error: incompatible types: boolean cannot be converted to CVector
	ComplexUnit player = new ComplexUnit(true, false);
	                                     ^
D:\GitHub\scifirpg\scifirpg\src\main\java\sharp\game\App.java:68: error: cannot find symbol
	System.out.println("Added player poly: " + player.addPoly(poly));
	                                                 ^
  symbol:   method addPoly(Polygon)
  location: variable player of type ComplexUnit
D:\GitHub\scifirpg\scifirpg\src\main\java\sharp\game\App.java:69: error: no suitable method found for add(ComplexUnit)
	root.getChildren().add(player);
	                  ^
    method Collection.add(Node) is not applicable
      (argument mismatch; ComplexUnit cannot be converted to Node)
    method List.add(Node) is not applicable
      (argument mismatch; ComplexUnit cannot be converted to Node)
D:\GitHub\scifirpg\scifirpg\src\main\java\sharp\unit\HingedUnit.java:6: error: incompatible types: boolean cannot be converted to CVector
	super(true, false);
	      ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
